Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124922

The text in a TextEdit is not updated when LayoutMirroring is enabled

XMLWordPrintable

    • Linux/X11, Windows
    • bc722385f (dev), 07a7b349e (6.8), 629bb4f89 (6.7), a934d86f6 (tqtc/lts-6.5)

      When layout mirroring is enabled the horizontal alignment of the TextEdit text property is not updated. But when some other property of TextEdit is updated with the same condition then the horizontal alignment of the text property also updates as expected.

      Attached example reproduces the issue. 

      Steps:

      1. Run the attached example
      2. Check the checkbox

      Expected behavior: Text should be aligned to the right.

      Actual behavior: Text is aligned to the left.

      Resizing the window or updating a TextEdit property will align the text to the right. 

        1. qtbug124922.zip
          3 kB
          Lysandra Sola
        For Gerrit Dashboard: QTBUG-124922
        # Subject Branch Project Status CR V

            kagro Kaj Grönholm
            lysandra.sola Lysandra Sola
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes