Fix updating TextEdit when mirroring changes

When Item LayoutMirroring changes and mirrorChange() gets called,
update the document properly.

Task-number: QTBUG-124922
Pick-to: 6.7 6.5
Change-Id: I2b8a0e05ae3f0479eed68c0a7f84b23ba8d56e76
Reviewed-by: Oliver Eftevaag <oliver.eftevaag@qt.io>
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>
(cherry picked from commit bc722385fbfba625b9fba6fac035a2982820eab9)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>